@@ -2,7 +2,7 @@
 language: android
 android:
   components:
-    - android-26
+    - android-28
     - build-tools-28.0.3
 # enable building on container-based infrastructure
 sudo: false
