@@ -1,7 +1,9 @@
  v0.6 (not released yet)
  - build against Android SDK 8.0 (API 26)
  - improved German translation, thanks to Silvério Santos
- - build with Gradle 3.0.1
+ - issue #176 : build with Gradle 4.6 and Gradle android plugin 3.2.1
+ - issue #175 : build against Android SDK 9.0 (API 28)
+ - issue #177 : increase minimum supported Android SDK 4.0 (API 14)
 
  v0.5.1 (released on 02Nov2018)
  - improved Polish translation, thanks to WaldiS
